--- a/layouts/main.handlebars
+++ b/layouts/main.handlebars
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>MVC With Cats!</title>
+		<title>The best burgers ever</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/cats.js"></script>
+		<script src="sever.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
